--- a/L-4-Lockdown-Response-Code.html
+++ b/L-4-Lockdown-Response-Code.html
@@ -365,13 +365,13 @@
         <p>Deployment of an ARI will recognize the Lockdown Degree issued to the breach. The higher the degree, the more prevalent the ARI.</p>
 
         <div class="classified">
-            <h3>Protocol "<span class="permanent-redacted">_______</span>"</h3>
-            <p>Initiative responsible for the Manually Confirmed <span class="permanent-redacted">___________</span> of the on-site <span class="permanent-redacted">_______</span> located on the surface of the facility. Authorized only in high-threat situations reaching Priority-B, being an effective method of Terminating all life above the facility while possibly protecting the site if the underground blast shielding is reliable, if so it and the facility should remain mostly intact after deployment. Requires executive orders by <span class="permanent-redacted">_______________________________________________________________________________________________________</span> and approval for use.</p>
+            <h3>Protocol "<span class="permanent-redacted">██████████</span>"</h3>
+            <p>Initiative responsible for the Manually Confirmed <span class="permanent-redacted">██████████████</span> of the on-site <span class="permanent-redacted">████████</span> located on the surface of the facility. Authorized only in high-threat situations reaching Priority-B, being an effective method of Terminating all life above the facility while possibly protecting the site if the underground blast shielding is reliable, if so it and the facility should remain mostly intact after deployment. Requires executive orders by <span class="permanent-redacted">████████████████████████████████████</span> and approval for use.</p>
         </div>
 
         <div class="classified">
-            <h3>Protocol "<span class="permanent-redacted">______________</span>"</h3>
-            <p>A protocol that initiates the launching of 15 <span class="permanent-redacted">_______________________________________________</span> and <span class="permanent-redacted">_________________</span> towards the site specifically targeting all life within the site. Code Delta initiates shortly after, making ALL Manual Control Surfaces are locked down under Level Omni Security Lockdown, amoung other things. see Code Delta in the Discord Server for further details on Code Delta.</p>
+            <h3>Protocol "<span class="permanent-redacted">██████████████</span>"</h3>
+            <p>A protocol that initiates the launching of 15 <span class="permanent-redacted">██████████████████████████████████████████████████████</span> and <span class="permanent-redacted">██████████████████</span> towards the site specifically targeting all life within the site. Code Delta initiates shortly after, making ALL Manual Control Surfaces are locked down under Level Omni Security Lockdown, amoung other things. [see Code Delta in the Discord Server for further details on Code Delta.]</p>
         </div>
 
         <h3>AR-1: "EARLY RETIREMENT"</h3>
