--- a/PLP-L-5.html
+++ b/PLP-L-5.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>SCP Foundation Secure Login</title>
+    <script src="/js/visitor-info.js"></script>
     <style>
         body {
             background: #000;
