--- a/L-2-Dashboard.html
+++ b/L-2-Dashboard.html
@@ -84,11 +84,11 @@
         </div>
 
         <div class="dashboard-grid">
-            <div class="dashboard-box" onclick="window.location.href='https://abacromby-studios.github.io/Site-Omegon/L-2-Code-of-Ethics.html'">
+            <div class="dashboard-box" onclick="window.location.href='/L-2-Code-of-Ethics.html'">
                 <h2>L-5 CoE</h2>
                 <p>Access Level 2 Code of Ethics</p>
             </div>
-            <div class="dashboard-box" onclick="window.location.href='https://abacromby-studios.github.io/Site-Omegon/L-2-Lockdown-Response-Code.html'">
+            <div class="dashboard-box" onclick="window.location.href='/L-2-Lockdown-Response-Code.html'">
                 <h2>L-5 LRC</h2>
                 <p>Access Level 2 Lockdown Response Code</p>
             </div>
