--- a/L-3-Dashboard.html
+++ b/L-3-Dashboard.html
@@ -79,17 +79,17 @@
             <div class="logo">
                 <img src="https://cdn.discordapp.com/attachments/1303447019268079628/1320703350387376228/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png" alt="SCP Foundation">
             </div>
-            <h1>L-5 COMMAND DASHBOARD</h1>
+            <h1>L-3 COMMAND DASHBOARD</h1>
             <div class="warning">⚠ LEVEL 3 CLEARANCE REQUIRED ⚠</div>
         </div>
 
         <div class="dashboard-grid">
-            <div class="dashboard-box" onclick="window.location.href='https://abacromby-studios.github.io/Site-Omegon/L-3-Code-of-Ethics.html'">
-                <h2>L-5 CoE</h2>
+            <div class="dashboard-box" onclick="window.location.href='/L-3-Code-of-Ethics.html'">
+                <h2>L-3 CoE</h2>
                 <p>Access Level 3 Code of Ethics</p>
             </div>
-            <div class="dashboard-box" onclick="window.location.href='https://abacromby-studios.github.io/Site-Omegon/L-3-Lockdown-Response-Code.html'">
-                <h2>L-5 LRC</h2>
+            <div class="dashboard-box" onclick="window.location.href='/L-3-Lockdown-Response-Code.html'">
+                <h2>L-3 LRC</h2>
                 <p>Access Level 3 Lockdown Response Code</p>
             </div>
         </div>
