--- a/PLP-L-2.html
+++ b/PLP-L-2.html
@@ -108,8 +108,8 @@
             
             FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal.html' },
             FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal.html' },
-            FSDuser3: { password: 'password', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal.html' },
-            FSDuser125: { password: 'password', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal.html' },
+            FSD_5105_REDACTED_Jr_Guardsmen: { password: 'Facility Security Department Unit 5105 Junior Guardsmen REDACTED', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal.html' },
+            FSD_7329_Cerberus_Jr_Guardsmen: { password: 'Facility Security Department Unit 7329 Junior Guardsmen', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal.html' },
             
         };
 
