--- a/PLP-L-5.html
+++ b/PLP-L-5.html
@@ -122,6 +122,7 @@
             'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https://testurl.com' },
             'TAs_OOTA_Secretary': { password: 'The Administrators Office of The Administrator Secretary', redirect: 'https://testurl.com' },
             DoRAEC_BoD_Comic: { password: 'Department of Regulation And Ethics Committre Board of Directors Comic', redirect: 'https://Abacromby-Studios.github.io/Site-Omegon/DoRAEC_BoD0015.html' },
+            'ISDEntryAgentHubRise': { password: 'Internal Security Department Entry Agent HubRise', redirect: 'https://testurl.com' },
         };
 
         document.getElementById('loginForm').addEventListener('submit', function(e) {
