--- a/Resh-1-SoC-Terminal.html
+++ b/Resh-1-SoC-Terminal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Task Force Resh-1 ("Seat of Consciousness") Terminal</title>
+    <title>Mobile Task Force Beta-7 Dashboard</title>
     <style>
         body {
             background-color: #000;
@@ -57,7 +57,6 @@
             from { opacity: 0; }
             to { opacity: 1; }
         }
-        /* Customizing scrollbar */
         ::-webkit-scrollbar {
             width: 10px;
         }
@@ -70,13 +69,36 @@
         ::-webkit-scrollbar-thumb:hover {
             background: #00cc00;
         }
+        .digital-button {
+            background-color: #001100;
+            border: 2px solid #00ff00;
+            color: #00ff00;
+            padding: 15px 30px;
+            font-family: 'Courier New', monospace;
+            font-size: 16px;
+            cursor: pointer;
+            margin-top: 20px;
+            display: block;
+            width: 300px;
+            margin: 20px auto;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            transition: all 0.3s;
+        }
+        .digital-button:hover {
+            background-color: #00ff00;
+            color: #000;
+            box-shadow: 0 0 15px #00ff00;
+        }
     </style>
 </head>
 <body>
-    <img id="scp-logo" src="https://th.bing.com/th?id=OIP.fsF3HkR3QZnGeVoN8larRQHaEK&w=333&h=187&c=8&rs=1&qlt=90&r=0&o=6&dpr=1.5&pid=3.1&rm=2" alt="SCP Logo" style="opacity: 0;">
+    <img id="scp-logo" src="https://cdn.discordapp.com/attachments/1289269250451832954/1297262110610559026/saygex.png?ex=671548fd&is=6713f77d&hm=74cf47be16049ed044ff8bfe1915a43641d828a64df4c0805119de560a0eb6d6&" alt="SCP Logo" style="opacity: 0;">
     <div id="terminal-container">
         <div id="terminal"></div>
+        <button class="digital-button" onclick="window.location.href='https://armed-research-and-containment-site-omegon.vercel.app/L-5-Dashboard.html'">Access L-5 Main Dashboard</button>
     </div>
+
 
     <script>
         const terminal = document.getElementById('terminal');
