--- a/PLP-L-4.html
+++ b/PLP-L-4.html
@@ -105,15 +105,15 @@
     </div>
     <script>
         const users = {
-            MTF_E11_Sr_Op_Ensign: { password: 'Mobile Task Force Epsilion-11 Senior Operative Ensign', redirect: 'https://sites.google.com/view/site-omegon/Epsilon-11-NTF-Terminal.html' },
-            MTF_E11_Op_Ken: { password: 'Mobile Task Force Epsilon-11 Operative Ken', redirect: 'https://github.com/Abacromby-Studios/Site-Omegon/Epsilon-11-NTF-Terminal.html' },
-            MTF_E11_Sr.Op_Razor: { password: 'Mobile Task Force Epsilon-11 Senior Operative Razor', redirect: 'https://github.com/Abacromby-Studios/Site-Omegon/Epsilon-11-NTF-Terminal.html' },
-            MTF_B7_Op_Ollie: { password: 'Mobile Task Force Beta-7 Operative Ollie', redirect: 'https://github.com/Abacromby-Studios/Site-Omegon/Beta-7-MH-Terminal.html' },
-            MTF_B7_Op_Kat: { password: 'Mobile Task Force Beta-7 Operative Kat', redirect: 'https://github.com/Abacromby-Studios/Site-Omegon/Beta-7-MH-Terminal.html' },
-            MTF_B7_Op_Juxtice: { password: 'Mobile Task Force Beta-7 Operative Juxtice', redirect: 'https://github.com/Abacromby-Studios/Site-Omegon/Beta-7-MH-Terminal.html' },
+            MTF_E11_Sr_Op_Ensign: { password: 'Mobile Task Force Epsilion-11 Senior Operative Ensign', redirect: '/Epsilon-11-NTF-Terminal.html' },
+            MTF_E11_Op_Ken: { password: 'Mobile Task Force Epsilon-11 Operative Ken', redirect: '/Epsilon-11-NTF-Terminal.html' },
+            MTF_E11_Sr.Op_Razor: { password: 'Mobile Task Force Epsilon-11 Senior Operative Razor', redirect: '/Epsilon-11-NTF-Terminal.html' },
+            MTF_B7_Op_Ollie: { password: 'Mobile Task Force Beta-7 Operative Ollie', redirect: 'Beta-7-MH-Terminal.html' },
+            MTF_B7_Op_Kat: { password: 'Mobile Task Force Beta-7 Operative Kat', redirect: '/Beta-7-MH-Terminal.html' },
+            MTF_B7_Op_Juxtice: { password: 'Mobile Task Force Beta-7 Operative Juxtice', redirect: '/Beta-7-MH-Terminal.html' },
             DoRAECuser3: { password: 'password', redirect: 'https://testurl.com' },
             DoRAECuser50: { password: 'password', redirect: 'https://testurl.com' },
-            FSD_6871_Capt_Readacted: { password: 'Facility Security Depsrtment Captain Readacted', redirect: 'https://' },
+            
         };
 
         document.getElementById('loginForm').addEventListener('submit', function(e) {
