--- a/PLP-L-3.html
+++ b/PLP-L-3.html
@@ -106,7 +106,7 @@
     <script>
         const users = {
 
-            FSD_416_Enlist_Nugget: { password: 'Facility Security Department Enlist Nugget', redirect: 'https://abacromby-studios.github.io/Site-Omegon/FSD-Terminal' },
+            FSD_416_Enlist_Nugget: { password: 'Facility Security Department Enlist Nugget', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Site-Omegon/FSD-Terminal' },
             FSDFillerUser: { password: 'password', redirect: 'https://testurl.com' },
             FSDFillerUser: { password: 'password', redirect: 'https://testurl.com' },
             FSDFillerUser: { password: 'password', redirect: 'https://testurl.com' },
