--- a/Nu-7-HD-Terminal.html
+++ b/Nu-7-HD-Terminal.html
@@ -139,7 +139,7 @@ PLEASE ENTER PASSWORD.
 
 LOGGING IN…
 
-Welcome Mobile Task Force Epsilon-11 ("Nine Tailed Fox")
+Welcome Mobile Task Force Nu-7-11 ("Hammer Down")
 
 YOU HAVE NO NEW NOTIFICATION(S)
 
