--- a/PLP-L-4.html
+++ b/PLP-L-4.html
@@ -105,14 +105,16 @@
     </div>
     <script>
         const users = {
-            MTF_E11_Sr_Op_Ensign: { password: 'Mobile Task Force Epsilion-11 Senior Operative Ensign', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Epsilon-11-NTF-Terminal.html' },
-            MTF_E11_Op_Ken: { password: 'Mobile Task Force Epsilon-11 Operative Ken', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Epsilon-11-NTF-Terminal.html' },
-            MTF_E11_Sr.Op_Razor: { password: 'Mobile Task Force Epsilon-11 Senior Operative Razor', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Epsilon-11-NTF-Terminal.html' },
-            MTF_B7_Op_Ollie: { password: 'Mobile Task Force Beta-7 Operative Ollie', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Beta-7-MH-Terminal.html' },
-            MTF_B7_Op_Kat: { password: 'Mobile Task Force Beta-7 Operative Kat', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Beta-7-MH-Terminal.html' },
-            MTF_B7_Op_Juxtice: { password: 'Mobile Task Force Beta-7 Operative Juxtice', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Beta-7-MH-Terminal.html' },
-            DoRAECuser3: { password: 'password', redirect: 'https://testurl.com' },
-            DoRAECuser50: { password: 'password', redirect: 'https://testurl.com' }
+    MTF_E11_Sr_Op_Ensign: { password: 'Mobile Task Force Epsilon-11 Senior Operative Ensign', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Epsilon-11-NTF-Terminal.html' },
+    MTF_E11_Op_Ken: { password: 'Mobile Task Force Epsilon-11 Operative Ken', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Epsilon-11-NTF-Terminal.html' },
+    MTF_E11_Sr_Op_Razor: { password: 'Mobile Task Force Epsilon-11 Senior Operative Razor', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Epsilon-11-NTF-Terminal.html' },
+    MTF_B7_Op_Ollie: { password: 'Mobile Task Force Beta-7 Operative Ollie', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Beta-7-MH-Terminal.html' },
+    MTF_B7_Op_Kat: { password: 'Mobile Task Force Beta-7 Operative Kat', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Beta-7-MH-Terminal.html' },
+    MTF_B7_Op_Juxtice: { password: 'Mobile Task Force Beta-7 Operative Juxtice', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Beta-7-MH-Terminal.html' },
+    DoRAECuser3: { password: 'password', redirect: 'https://testurl.com' },
+    DoRAECuser50: { password: 'password', redirect: 'https://testurl.com' }
+}
+
         };
 
         document.getElementById('loginForm').addEventListener('submit', function(e) {
