--- a/PLP-L-4.html
+++ b/PLP-L-4.html
@@ -111,7 +111,7 @@
     MTF_B7_Op_Kat: { password: 'Mobile Task Force Beta-7 Operative Kat', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Beta-7-MH-Terminal.html' },
     MTF_B7_Op_Juxtice: { password: 'Mobile Task Force Beta-7 Operative Juxtice', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Beta-7-MH-Terminal.html' },
     DoRAECuser3: { password: 'password', redirect: 'https://testurl.com' },
-    DoRAECuser50: { password: 'password', redirect: 'https://testurl.com' }
+   ADMIN: { password: 'ADMIN', redirect: 'https://testurl.com' }
 };
 
         };
