--- a/PLP-L-2.html
+++ b/PLP-L-2.html
@@ -106,9 +106,9 @@
     <script>
         const users = {
             
-            FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Site-Omegon/FSD-Terminal.html' },
-            FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Site-Omegon/FSD-Terminal.html' },
-            FSD_5105_REDACTED_Jr_Guardsmen: { password: 'Facility Security Department Unit 5105 Junior Guardsmen REDACTED', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/Site-Omegon/FSD-Terminal.html' },
+            FSD_3421_Debris: { password: 'Facility Security Department user 3421 Junior Guard Debris', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/FSD-Terminal.html' },
+            FSD_8154_Sure: { password: 'Facility Security Department User 8154 Senior Guard Sure', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/FSD-Terminal.html' },
+            FSD_5105_REDACTED_Jr_Guardsmen: { password: 'Facility Security Department Unit 5105 Junior Guardsmen REDACTED', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/FSD-Terminal.html' },
             FSD_7329_Cerberus_Jr_Guardsmen: { password: 'Facility Security Department Unit 7329 Junior Guardsmen', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/FSD-Terminal.html' },
             
         };
