--- a/L-2-Lockdown-Response-Code.html
+++ b/L-2-Lockdown-Response-Code.html
@@ -1,4 +1,4 @@
-████████████████<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -204,7 +204,7 @@
 
     <section>
         <h2>OVERVIEW</h2>
-        <p>A lockdown is defined as a varying emergency procedure in response to a containment breach or loss of security. Lockdowns are requested using an LRC (Lockdown Response Code) and ordered by the O4 communications group. Once evaluated, lockdowns are classified using Lockdown Degrees, which provide pre-created guidance on the appropriate response, such as AMTF (Armed Mobile Task Force) units and Automated Response Initiatives (ARIs), commissioned when appropriate to suppress the apparent threat.</p>
+        <p>A lockdown is defined as a varying emergency procedure in response to a containment breach or loss of security. Lockdowns are requested using an LRC (Lockdown Response Code) and ordered by the ██████████████████████████. Once evaluated, lockdowns are classified using Lockdown Degrees, which provide pre-created guidance on the appropriate response, such as AMTF (Armed Mobile Task Force) units and Automated Response Initiatives (ARIs), commissioned when appropriate to suppress the apparent threat.</p>
     </section>
     <div class="section-divider"></div>
 
@@ -223,7 +223,7 @@
 
     <section>
         <h2>EVALUATION</h2>
-        <h3>O4 Command</h3>
+        <h3>██████████</h3>
         <p>Originally, lockdowns were ordered manually by the ████████████████, as a response to a distress call triggered from a select facility. Following the rapid scale of the Foundation expansion, registration and commission of any lockdown is now controlled by another group, known as the ██████████.</p>
         
         <p>The ██████████ are responsible specifically for the handling of inbound LRCs and alerts from compromised sites, and the appropriate responses issued to these requests. Because of this, the O4 Command is a communicative group, and serve as the organization team for all lockdowns across the whole Foundation.</p>
@@ -267,7 +267,7 @@
         <h2>LOCKDOWN CLASSIFICATIONS</h2>
 
         <h3>CODE: AMBER</h3>
-        <p>Synopsis: highlights the escape of at least one memetic1, infohazardous2 or cognitohazardous3 threat on-site staff are unable to currently suppress without foreign intervention.</p>
+        <p>Synopsis: highlights the escape of at least one memetic, infohazardous or cognitohazardous threat on-site staff are unable to currently suppress without foreign intervention.</p>
 
         <p>Special Guidance: staff are advised to wait calmly for security to escort them and or otherwise remain still, avoid talking (or otherwise acting as a vector for the agent) and to close eyes/ears as best as possible. Do not evacuate by yourself, wait for security to direct you. Do not intervene with compromised staff affected by the agent. Do not attempt to leave the site.</p>
 
