--- a/L-3-Code-of-Ethics.html
+++ b/L-3-Code-of-Ethics.html
@@ -119,7 +119,7 @@
                     <p><span class="classified">_______________________</span>, Classified Personnel, Redacted Personnel, and The<span class="classified">______________</span> and any of his underlings These are the highest ranks of the Foundation. These personnel can leave the site at any time as long as Mobile Task Force Operatives give permission.</p>
 
                     <h4>Class B Personnel »Civil«</h4>
-                    <p>Administrative Department, Department of External Affairs, Ethics Committee are all considered Civil departments and are deemed very important to the site these personnel can leave the site as long as they have Level Thaumiel Security Clearance and have permission from Mobile Task Force Operatives</p>
+                    <p>Administrative Department, Department of External Affairs, and the Department of Regulations And Ethics Committee are all considered Civil departments and are deemed very important to the site these personnel can leave the site as long as they have Level Thaumiel Security Clearance and have permission from Mobile Task Force Operatives</p>
 
                     <h4>Class C Personnel »Combative«</h4>
                     <p>Mobile Task Force, Rapid Response Teams and Facility Security Department are all Combative divisions and should be treated as such and can access normally to sector 3 and some sector 4 and can leave the facility if they have Level Thaumiel Security Clearance or proper authorization.</p>
@@ -186,9 +186,9 @@
                     <ul>
                         <li><span class="classified">_______________________</span></li>
                         <li>The<span class="classified">______________</span></li>
-                        <li>IA</li>
-                        <li>ISD</li>
-                        <li>Ethics</li>
+                        <li><span class="classified">___</span></li>
+                        <li>1<span class="classified">____</span></li>
+                        <li>DoRAEC</li>
                         <li>Alpha 1</li>
                         <li>Omega 1</li>
                         <li>[Data Expunged]</li>
@@ -243,10 +243,10 @@
                     <ul>
                         <li><span class="classified">_______________________</span></li>
                         <li>The<span class="classified">______________</span></li>
-                        <li>IA</li>
-                        <li>ISD (unless given permission)</li>
+                        <li><span class="classified">___</span></li>
+                        <li><span class="classified">____</span> (unless given permission)</li>
                         <li>Medical</li>
-                        <li>Ethics</li>
+                        <li>DoRAEC</li>
                         <li>DEA</li>
                         <li>Administration</li>
                         <li>Janitorial</li>
@@ -259,7 +259,7 @@
                         <li>MTF</li>
                         <li>Security</li>
                         <li>RRT</li>
-                        <li>ISD (if given permission)</li>
+                        <li><span class="classified">____</span> (if given permission)</li>
                         <li>ERU</li>
                         <li>SRU (If given permission)</li>
                     </ul>
@@ -319,7 +319,7 @@
 
                 <h3>COE 6:0 <span class="classified">_______________________</span> Authority</h3>
                 <div class="o5-limits">
-                    <p>O5's have lot of authority although there is many things that they may not do:</p>
+                    <p><span class="classified">___</span>'s have lot of authority although there is many things that they may not do:</p>
                     <ul>
                         <li>Free Ranking</li>
                         <li>Abusing commands (flying, tping, etc)</li>
@@ -333,7 +333,7 @@
                 <p>The<span class="classified">______________</span> may only gather the Vice<span class="classified">______________</span> out of, Ethics Committee, O5 Council, Intelligence Agency, and Administrative Department (this is to stop people from getting free ranked to a very high rank and have a understanding of The<span class="classified">______________</span> and his rank)</p>
 
                 <h3>COE 6:2 Site Command Authority</h3>
-                <p>Site Command or otherwise known as Site Director, Deputy Site Director, and Site Manager etc. each of these have a role not too far off from each other. The Site Director is supposed to direct all divisions and manage everyone's role until there are people in the Administrative Department. Co Site Director does the same job as Site Director. Site Manager assesses people's ranks and promotions and demotions and manages them and keeps track of them. All members of Site Command have a specific authority and if anything happens that is very serious and high class, and the Ethics Committee can't manage to control it, Ethics will come to Site Command.</p>
+                <p>Site Command or otherwise known as Site Director, Deputy Site Director, and Site Manager etc. each of these have a role not too far off from each other. The Site Director is supposed to direct all divisions and manage everyone's role until there are people in the Administrative Department. Deputy Site Director does the same job as Site Director. Site Manager assesses people's ranks and promotions and demotions and manages them and keeps track of them. All members of Site Command have a specific authority and if anything happens that is very serious and high class, and the Ethics Committee can't manage to control it, Ethics will come to Site Command.</p>
             </div>
 
             <div class="section">
@@ -410,7 +410,7 @@
                 <h3>COE 8:1 The<span class="classified">______________</span>'s Rights</h3>
                 <p>The aforementioned person may order a termination of ANY personnel for whatever reason he/she deems fit, this can range from unauthorized knowledge, corruption, or even looking at him/her the wrong way. May dismiss his secretary for any reason or any other underlings but may not do the same to other personnel.</p>
 
-                <h3>COE 8:2 Ethics Committee's Rights</h3>
+                <h3>COE 8:2 Regulations & Ethics Committee's Rights</h3>
                 <p>The Ethics Committee cannot be demoted unless they abuse their powers, or violate their policies. The Ethics Committee should be feared by the <span class="classified">_________________________</span>, and respected as well by the <span class="classified">__________________</span>. Members They may not persecute The<span class="classified">_____________</span> For any reason, they can minorly persecute [ÐĀŤÅ―ÊXPÚÑĜÈÐ] they can only issue [ÐĀŤÅ―ÊXPÚÑĜÈÐ] Classification-Alpha unless the Task Force Overseeing Members act upon it.</p>
 
                 <h2>Ethics Sub articles</h2>
