--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -36,7 +36,7 @@
     <div class="section">
         <p>Abacromby Studios (the "Company") is committed to maintaining robust privacy protections for its users. Our Privacy Policy ("Privacy Policy") is designed to help you understand how we collect, use and safeguard the information you provide to us and to assist you in making informed decisions when using our Service.</p>
         
-        <p>For purposes of this Agreement, "Site" refers to the Company's website, which can be accessed at https://sites.google.com/view/site-omegon. "Service" refers to the Company's services accessed via the Site, in which users can SCP Roleplay Roblox Game. The terms "we," "us," and "our" refer to the Company. "You" refers to you, as a user of our Site or our Service.</p>
+        <p>For purposes of this Agreement, "Site" refers to the Company's website, which can be accessed at https://armed-research-and-containment-site-omegon.vercel.app. "Service" refers to the Company's services accessed via the Site, in which users can roleplay as the SCP Foundation on the Roblox platform. The terms "we," "us," and "our" refer to the Company. "You" refers to you, as a user of our Site or our Service.</p>
         
         <p>By accessing our Site or our Service, you accept our Privacy Policy and Terms of Use (found here: https://sites.google.com/view/site-omegon), and you consent to our collection, storage, use and disclosure of your Personal Information as described in this Privacy Policy.</p>
     </div>
