--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+I'm<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -99,7 +99,7 @@
                 <input type="text" class="email-input" value="scpf.site.omegon.human.resources@tidio.xyz" readonly>
             </div>
             <div class="email-card">
-                <input type="text" class="email-input" value="scpf.site.omegon.human.resources@tidio.xyz" readonly>
+                <input type="text" class="email-input" value="scpf.site.omegon.web.development.xyz" readonly>
             </div>
             <div class="email-card">
                 <input type="text" class="email-input" value="site.omegon.game.development.team@tidio.xyz" readonly>
