--- a/DoRAEC-Vice-Editor-173-Terminal.html
+++ b/DoRAEC-Vice-Editor-173-Terminal.html
@@ -70,6 +70,27 @@
         ::-webkit-scrollbar-thumb:hover {
             background: #00cc00;
         }
+        .digital-button {
+            background-color: #001100;
+            border: 2px solid #00ff00;
+            color: #00ff00;
+            padding: 15px 30px;
+            font-family: 'Courier New', monospace;
+            font-size: 16px;
+            cursor: pointer;
+            margin-top: 20px;
+            display: block;
+            width: 300px;
+            margin: 20px auto;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            transition: all 0.3s;
+        }
+        .digital-button:hover {
+            background-color: #00ff00;
+            color: #000;
+            box-shadow: 0 0 15px #00ff00;
+        }
     </style>
 </head>
 <body>
