--- a/PLP-L-5.html
+++ b/PLP-L-5.html
@@ -121,7 +121,7 @@
             'O5-13': { password: 'password', redirect: 'https://testurl.com' },
             'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https://testurl.com' },
             'TAs_OOTA_Secretary': { password: 'The Administrators Office of The Administrator Secretary', redirect: 'https://testurl.com' },
-            DoRAEC_VE_Comic: { password: 'Department of Regulation And Ethics Committee Vice Editor Comic', redirect: 'https://armed-reaearch-and-containment-site-omegon.vercel.app/DoRAEC_VE_173.html' },
+            DoRAEC_VE_Comic: { password: 'Department of Regulation And Ethics Committee Vice Editor Comic', redirect: 'https://armed-reaearch-and-containment-site-omegon.vercel.app/DoRAEC-Vice-Editor-173-Terminal.html' },
             'ISDEntryAgentHubRise': { password: 'Internal Security Department Entry Agent HubRise', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/ISD-Terminal.html' }
         };
 
