--- a/DoRAEC-Vice-Editor-173-Terminal.html
+++ b/DoRAEC-Vice-Editor-173-Terminal.html
@@ -142,7 +142,7 @@ PLEASE ENTER PASSWORD.
 
 LOGGING IN…
 
-Welcome Dept Regulations & Ethics Committee, Board of Director, "The Enforcer"
+Welcome Dept Regulations & Ethics Committee, Vice-Editor, "The Enforcer"
 
 YOU HAVE NO NEW NOTIFICATION(S)
 
