--- a/DoRAEC-Vice-Editor-173-Terminal.html
+++ b/DoRAEC-Vice-Editor-173-Terminal.html
@@ -126,7 +126,7 @@ Terminal booted
 
  
 
-                                                        > login BoD.DORAC.The_Law_Bringer
+                                                        > login E.DORAC.The_Editor
 
 LOGGING IN…
 
@@ -142,7 +142,7 @@ PLEASE ENTER PASSWORD.
 
 LOGGING IN…
 
-Welcome Dept Regulations & Ethics Committee, Vice-Editor, "The Enforcer"
+Welcome Dept Regulations & Ethics Committee, Editor, "The Enforcer"
 
 YOU HAVE NO NEW NOTIFICATION(S)
 
