--- a/L-5-Code-of-Ethics.html
+++ b/L-5-Code-of-Ethics.html
@@ -484,6 +484,8 @@
                         <li>4+ No rank to HR Classification-X ray</li>
                     </ul>
                 </div>
+                <h3>COE 10:7 Unlawful discharge of a firearm</h3>
+                <p>Randomly discharging your firearm is strictly prohibited, or discharging your firearm for no legitimate purpose/reason as it wastes foundation resources, can potentially injur nearby personnel, and destroy foundation property.</p>
             </div>
         </div>
     </body>
