--- a/L-5-Code-of-Ethics.html
+++ b/L-5-Code-of-Ethics.html
@@ -486,7 +486,25 @@
                 </div>
                 <h3>COE 10:7 Unlawful discharge of a firearm</h3>
                 <p>Randomly discharging your firearm is strictly prohibited, or discharging your firearm for no legitimate purpose/reason as it wastes foundation resources, can potentially injur nearby personnel, and destroy foundation property.</p>
-            </div>
+        </div>
+        <div class="section">
+    <h2>Development Credits</h2>
+    <p>The following departments contributed to the development of this Code of Ethics:</p>
+    <div class="classification">
+        <p class="data-expunged">████████████ ██████ - (IA)</p>
+        <p class="data-expunged">████████ ████████ ████ - (ISD)</p>
+        <p>Internal Tribunal Department - (ITD)</p>
+        <p>Department of External Affairs - (DEA)</p>
+        <p>Manufacturing Department - (MD)</p>
+        <p>Recordkeeping and Information Security Administration (RAISA)</p>
+        <p>Artificial Intelligence Applications Division (AIAD)</p>
+        <p>Department of Tactical Theology - (DoTT)</p>
+        <p>The Telecommunications Monitoring Office (TMO)</p>
+        <p>Department of Deletions - (DoD)</p>
+        <p>Department of Training and Development - (DoTaD)</p>
+        <p>Overseer Council</p>
+    </div>
+        </div>
         </div>
     </body>
 </html>
