--- a/L-2-Code-of-Ethics.html
+++ b/L-2-Code-of-Ethics.html
@@ -374,31 +374,6 @@
                     </ul>
                 </div>
             </div>
-
-            <div class="section">
-                <h3>COE 7:2 Ethical Promotion</h3>
-                <div class="promotion-criteria">
-                    <p>Members of the foundation should be promoted if:</p>
-                    <ul>
-                        <li>Actively doing their job</li>
-                        <li>Attended SSU meeting</li>
-                        <li>Successfully suppressed a raid</li>
-                        <li>Active Trainings</li>
-                        <li>Suppressed a Riot</li>
-                        <li>Doing their job efficiently</li>
-                    </ul>
-                </div>
-
-                <h3>COE 7:3 Ethical Demotion</h3>
-                <div class="demotion-criteria">
-                    <p>Members may be demoted if they:</p>
-                    <ul>
-                        <li>Aren't Active</li>
-                        <li>Always Off Task</li>
-                        <li>Always unready</li>
-                        <li>Any other valid reason to do so</li>
-                    </ul>
-                </div>
             </div>
 
             <div class="section">
@@ -497,7 +472,25 @@
                 </div>
                 <h3>COE 10:7 Unlawful discharge of a firearm</h3>
                 <p>Randomly discharging your firearm is strictly prohibited, or discharging your firearm for no legitimate purpose/reason as it wastes foundation resources, can potentially injur nearby personnel, and destroy foundation property.</p>
-            </div>
+        </div>
+        <div class="section">
+    <h2>Development Credits</h2>
+    <p>The following departments contributed to the development of this Code of Ethics:</p>
+    <div class="classification">
+        <p class="data-expunged">████████████ ██████ - (IA)</p>
+        <p class="data-expunged">████████ ████████ ████ - (ISD)</p>
+        <p>Internal Tribunal Department - (ITD)</p>
+        <p>Department of External Affairs - (DEA)</p>
+        <p>Manufacturing Department - (MD)</p>
+        <p>Recordkeeping and Information Security Administration (RAISA)</p>
+        <p>Artificial Intelligence Applications Division (AIAD)</p>
+        <p>Department of Tactical Theology - (DoTT)</p>
+        <p>The Telecommunications Monitoring Office (TMO)</p>
+        <p>Department of Deletions - (DoD)</p>
+        <p>Department of Training and Development - (DoTaD)</p>
+        <p>█████████ ███████</p>
+    </div>
+        </div>
         </div>
     </body>
 </html>
