--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
     </header>
     <main>
         <section id="home" class="hero">
-            <h1>Welcome to Armed Research & Containment Site-Omegon</h1>
-            <p>join, get trained, do your job, HAVE A FUN TIME!</p>
-            <a href="#" class="cta-button">Play Now</a>
-        </section>
+    <h1>Welcome to Armed Research & Containment Site-Omegon</h1>
+    <p>join, get trained, do your job, HAVE A FUN TIME!</p>
+    <a href="https://www.roblox.com/games/17449989711/SCP-F-Armed-Research-Containment-Site-Omegon?gameSetTypeId=100000003&homePageSessionInfo=84979d26-9052-4572-9e57-78fdb9f755fa&isAd=false&numberOfLoadedTiles=5&page=homePage&placeId=17449989711&playContext=homePage&position=0&sortPos=3&universeId=5971868203" class="cta-button">Play Now</a>
+</section>
+
         <section id="about" class="about">
             <h2>About Armed Research & Containment Site - Omegon</h2>
             <p>Armed Research & Containment Site - Omegon is an immersive Roblox experience based on the popular SCP Foundation universe. Dive into a world of anomalies, containment procedures, and supernatural phenomena, or get trained and become the best in your field</p>
@@ -128,7 +129,7 @@
             <p>Have questions or suggestions regarding the website? Reach out to us!</p>
             <a href="Contact.html" class="contact-button">Email our Website Developers</a>
             <p>Have questions or suggestions regarding the Game? Reach out to us!</p>
-            <a href="Contact.html" class="contact-button">Email our Game Developers</a>
+            <a href="Contact.html" class="contact-button">Email our Game Developers!</a>
             <p>Have legal requests? Reach out to us!</p>
             <a href="Contact.html" class="contact-button">Email our Legal Team</a>
         </section>
