--- a/index.html
+++ b/index.html
@@ -137,5 +137,6 @@
     <footer>
         <p>&copy; 2024-2025 Abacromby Studios. All rights reserved. Developed, maintained, and operated by Gk11773399/WisconsinDMV in the United States</p>
     </footer>
+    <script src="//code.tidio.co/lezb1xvdsaxahdtmaqrryivfifkbj6q4.js" async></script>
 </body>
 </html>
