--- a/FSD-Terminal.html
+++ b/FSD-Terminal.html
@@ -111,14 +111,14 @@ SCP-EPO Booting up
 .
 Terminal booted
  
-                                                    > login Beta_Seven.MobileTaskForce.maz.hatters 
+                                                    > login Facility_Sec._Dept._Omegon_12C
 LOGGING IN
 .
 .
 .
 PLEASE ENTER PASSWORD.
      
-                                     > pass Foxtrot.Sierra.Delta.1739.091.173 
+                                     > pass Foxtrot.Sierra.Delta.Omegon.12Charlie.1739.091.173 
 LOGGING IN…
 Welcome Armed Research and Containment Site - Omegon Facility Security Department
 YOU HAVE NO NEW NOTIFICATION(S)
