--- a/Alpha-1-RRH-Terminal.html
+++ b/Alpha-1-RRH-Terminal.html
@@ -145,9 +145,9 @@ Welcome Mobile Task Force ALPHA-1 ("Red Right Hand")
 
 YOU HAVE 1 NEW NOTIFICATION
 
-Re: Assignment to an Overseer's O.S
+Re: Assignment to an Overseer's I.S
 
-Your being assigned to O5-1's Protective Detail. You will be flown to Armed Research And Containment Site 01 then O5-1 will be flown alongside you to Armed Research & Containment Site Omegon. After immediate contact with -1 Oath of Silence will take place.
+Your being assigned to O5-1's Inquisitorial Squad. After immediate contact with Gate - Alpha or Gate - Bravo Oath of Silence will take place. You are to terminate Facility Security Department Junior Guardsmen, Redacted quietly, covertly, and without any attention. 
 `;
 
         let index = 0;
