--- a/PLP-L-5.html
+++ b/PLP-L-5.html
@@ -122,7 +122,7 @@
             'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https://testurl.com' },
             'TAs_OOTA_Secretary': { password: 'The Administrators Office of The Administrator Secretary', redirect: 'https://testurl.com' },
             DoRAEC_E_Comic: { password: 'Department of Regulation And Ethics Committee Editor Comic', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/DoRAEC-Vice-Editor-173-Terminal.html' },
-            'ISDEntryAgentHubRise': { password: 'Internal Security Department Entry Agent HubRise', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/ISD-Terminal.html' }
+            'MTF_A1_Sr_Op_Hubrise': { password: 'Mobile Task Force Alpha-1 Senior Operative HubRise', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/ISD-Terminal.html' }
         };
 
         document.getElementById('loginForm').addEventListener('submit', function(e) {
