--- a/PLP-L-5.html
+++ b/PLP-L-5.html
@@ -10,7 +10,7 @@
             color: #00ff00;
             margin: 0;
             padding: 0;
-            background-image: url('noise.png');
+            background-image: url('https://media.discordapp.net/attachments/1338795848619917315/1348598592431980590/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png?ex=67d00bd0&is=67ceba50&hm=4e1c1bc8eeead37b748c355e8a719e35565de78b29a1fbd97edfbb9302cdde74&');
         }
 
         .container {
