--- a/PLP-L-5.html
+++ b/PLP-L-5.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title>SCP Foundation Secure Login</title>
-    <script src="/js/visitor-info.js"></script>
     <style>
         body {
             background: #000;
@@ -85,7 +84,7 @@
     <div class="container">
         <div class="login-box">
             <div class="logo">
-                <img src="https://cdn.discordapp.com/attachments/1303447019268079628/1320703350387376228/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png?ex=676a9058&is=67693ed8&hm=f6e27e934522832d17c7f4ce05742d0affd68585e1639b7745d43dc9206c2fb1&" alt="SCP Foundation">
+                <img src="https://media.discordapp.net/attachments/1338795848619917315/1348598592431980590/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png?ex=67d00bd0&is=67ceba50&hm=4e1c1bc8eeead37b748c355e8a719e35565de78b29a1fbd97edfbb9302cdde74&' alt="SCP Foundation">
             </div>
             <h1>L-5+ SECURE ACCESS TERMINAL</h1>
             <div class="warning">
