--- a/Nu-7-HD-Terminal.html
+++ b/Nu-7-HD-Terminal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Task Force Beta-7 Dashboard</title>
+    <title>Mobile Task Force Nu-7 Dashboard</title>
     <style>
         body {
             background-color: #000;
@@ -57,18 +57,6 @@
             from { opacity: 0; }
             to { opacity: 1; }
         }
-        ::-webkit-scrollbar {
-            width: 10px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #001100;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #00ff00;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #00cc00;
-        }
         .digital-button {
             background-color: #001100;
             border: 2px solid #00ff00;
@@ -93,7 +81,7 @@
     </style>
 </head>
 <body>
-    <img id="scp-logo" src="https://cdn.discordapp.com/attachments/1289269250451832954/1297262110610559026/saygex.png?ex=671548fd&is=6713f77d&hm=74cf47be16049ed044ff8bfe1915a43641d828a64df4c0805119de560a0eb6d6&" alt="SCP Logo" style="opacity: 0;">
+    <img id="scp-logo" src="https://media.discordapp.net/attachments/1338795848619917315/1348598592431980590/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png?ex=67d00bd0&is=67ceba50&hm=4e1c1bc8eeead37b748c355e8a719e35565de78b29a1fbd97edfbb9302cdde74&" alt="SCP Logo" style="opacity: 0;">
     <div id="terminal-container">
         <div id="terminal"></div>
         <button class="digital-button" onclick="window.location.href='https://armed-research-and-containment-site-omegon.vercel.app/L-4-Dashboard.html'">Access L-5 Main Dashboard</button>
