--- a/DoRAEC_BoD0003.html
+++ b/DoRAEC_BoD0003.html
@@ -57,23 +57,10 @@
             from { opacity: 0; }
             to { opacity: 1; }
         }
-        /* Customizing scrollbar */
-        ::-webkit-scrollbar {
-            width: 10px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #001100;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #00ff00;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #00cc00;
-        }
     </style>
 </head>
 <body>
-    <img id="scp-logo" src="https://cdn.discordapp.com/attachments/1289269250451832954/1291375501117489343/output-onlinepngtools.png?ex=66ffdea8&is=66fe8d28&hm=c602f6c79350319d5ede974594990c8710d2cf5486aea09762354d840ffc55cb&" alt="SCP Logo" style="opacity: 0;">
+    <img id="scp-logo" src="https://media.discordapp.net/attachments/1338795848619917315/1348598592431980590/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png?ex=67d00bd0&is=67ceba50&hm=4e1c1bc8eeead37b748c355e8a719e35565de78b29a1fbd97edfbb9302cdde74&" alt="SCP Logo" style="opacity: 0;">
     <div id="terminal-container">
         <div id="terminal"></div>
     </div>
