--- a/Terms-Of-Use.html
+++ b/Terms-Of-Use.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="section">
-        <p>Welcome to the Abacromby Studios Terms of Use agreement. For purposes of this agreement, "Site" refers to the Company's website, which can be accessed at htpps://Armed-Research-And-Containment-Site-Omegon.replit.app/ "Service" refers to the Company's services accessed via the Site, in which users can roleplay in the SCP genre. The terms "we," "us," and "our" refer to the Company. "You" refers to you, as a user of our Site or our Service.</p>
+        <p>Welcome to the Abacromby Studios Terms of Use agreement. For purposes of this agreement, "Site" refers to the Company's website, which can be accessed at htpps://Armed-Research-And-Containment-Site-Omegon.vercel.app/ "Service" refers to the Company's services accessed via the Site, in which users can roleplay in the SCP genre. The terms "we," "us," and "our" refer to the Company. "You" refers to you, as a user of our Site or our Service.</p>
 
         <p>The following Terms of Use apply when you view or use the Service Site-Monarch, Site-Omegon</p>
 
@@ -45,7 +45,7 @@
 
     <div class="section">
         <h2>PRIVACY POLICY</h2>
-        <p>The Company respects the privacy of its Service users. Please refer to the Company's Privacy Policy (found here: htpps://Armed-Research-And-Containment-Site-Omegon.replit.app/) which explains how we collect, use, and disclose information that pertains to your privacy. When you access or use the Service, you signify your agreement to the Privacy Policy as well as these Terms of Use.</p>
+        <p>The Company respects the privacy of its Service users. Please refer to the Company's Privacy Policy (found here: htpps://Armed-Research-And-Containment-Site-Omegon.vercel.app/Privacy-Policy.html) which explains how we collect, use, and disclose information that pertains to your privacy. When you access or use the Service, you signify your agreement to the Privacy Policy as well as these Terms of Use.</p>
     </div>
 
     <div class="section">
@@ -55,7 +55,7 @@
 
     <div class="section">
         <h2>REGISTRATION; RULES FOR USER CONDUCT AND USE OF THE SERVICE</h2>
-        <p>You need to be at least 10 years old and a resident of the United States to register for and use the Service.</p>
+        <p>You need to be at least 12 years old and a resident of the United States or willing to follow United States of America, Commonwealth of Pennsylvania law to register for and use the Service.</p>
         <p>If you are a user who signs up for the Service, you will create a personalized account which includes a unique username and a password to access the Service and to receive messages from the Company. You agree to notify us immediately of any unauthorized use of your password and/or account. The Company will not be responsible for any liabilities, losses, or damages arising out of the unauthorized use of your member name, password and/or account.</p>
     </div>
 
@@ -86,6 +86,7 @@
             <li>Troll users or staff members.</li>
             <li>Be overly toxic</li>
             <li>Leave any official chat without two weeks of FORMAL resignation to a Abacromby Studios Official</li>
+            <li>Block the Chief Executive Officer or Assistant Chief Executive Officer</li>
         </ul>
     </div>
 
